Show avatar instead of username for shared files
Signed-off-by: Jan-Christoph Borchardt <hey@jancborchardt.net>

--- a/apps/files/css/files.scss
+++ b/apps/files/css/files.scss
@@ -555,6 +555,10 @@ a.action > img {
 #fileList a.action.action-share {
 	padding: 17px 14px;
 }
+#fileList a.action.action-share .avatar {
+	display: inline-block;
+	vertical-align: middle;
+}
 
 #fileList a.action.action-menu {
 	padding-top: 17px;
